Implemented an overflow menu. Got to work on the look of the layouts in the recyclerview but it is compiling.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">EnglishPortugueseVocabBuilderApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="about">About</string>
+    <string name="words_ending_in_al">Words Ending in AL</string>
 </resources>
